# UniProjects

./: README.md  pom.xml
ASM/: About the projects  About the projects.md  Lab1.asm  Lab2  Lab3.asm  Lab4
MAP/Lab1/: main
MAP/Lab2/: main.java
MAP/Lab2/Domain/: Comanda.java  Entity  Tort.java
MAP/Lab2/Service/: ComandaService.java
MAP/Lab3/: AbstractFileRepo.java  comenzi.txt  config.properties  main.java  testTextFileRepo.txt
MAP/Lab3/Domain/: AbstractConvertor.java  Comanda.java  ComandaConverter.java  Entity.java  Tort.java  tortConverter.java
MAP/Lab3/Repository/: AbstractFileRepo.java  BinaryFileRepo.java  (+3 more)
OOP/: Note.md
OOP/Lab2/: main.cpp  problema.cpp  problema.h  tests.cpp  tests.h
OOP/Lab3/: CMakeLists.txt  main.cpp  problema.cpp  problema.h  tests.cpp  tests.h
OOP/Lab4/: CMakeLists.txt  main.cpp  problema.cpp  problema.h  tests.cpp
OOP/Lab5-6/: CMakeLists.txt  Entity.cpp  Entity.h  Tests.cpp  Tests.h  main.cpp
OOP/Lab7-8/: CMakeLists.txt  main.cpp
OOP/Lab7-8/Domain/: Entities.cpp  Entities.h
OOP/Lab7-8/Repository/: Repo.cpp  Repo.h
OOP/Lab7-8/Service/: Service.cpp  Service.h
OOP/Lab7-8/Tests/: Tests.cpp  Tests.h
OOP/Lab7-8/UI/: UI.cpp  UI.h
OOP/Lab9-10/: CMakeLists.txt  Console.cpp  Repo.cpp  ServiceBilet.cpp  backup repo  main.cpp
OOP/Lab9-10/Domain/: Entity.cpp  Entity.h  Vali_and_Exept.h  vali.h
OOP/Lab9-10/Repository/: FileRepo.cpp  FileRepo.h  Repo.h
OOP/Lab9-10/Service/: ServiceBilet.h  backup service
OOP/Lab9-10/Tests/: Tests.cpp  Tests.h
OOP/Lab9-10/UI/: Console.h
SQL/: Lab1.sql  Lab2.sql  Lab3.sql  Lab4.sql
(+42 files in other folders)
